Fixed policies not centered again

--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -28,6 +28,7 @@
 
 .policy-cont .policies {
     display: flex;
+    justify-content: center;
     gap: 30px;
     width: 80%;
 }
